# hspec-codewars

./: README.md  hspec-codewars.cabal
Test/Hspec/: Codewars.hs
src/Test/Hspec/: Codewars.hs
